--- a/card.html
+++ b/card.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ID Card</title>
     <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #f0f0f0;
+        }
+
         .id-card {
             width: 350px;
             height: 200px;
@@ -22,21 +31,14 @@
             height: 80px;
             border-radius: 50%;
             background-color: #add8e6;
-            display: flex;
-            justify-content: center;
-            align-items: center;
             margin-right: 20px;
+            overflow: hidden;
         }
 
         .profile-pic img {
-            width: 80px;
-            height: 80px;
-            border-radius: 50%;
-        }
-
-        .person-icon {
-            width: 50px;
-            height: auto;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
 
         .details {
@@ -46,33 +48,27 @@
         }
 
         .name {
-            font-size: 18px;
+            font-size: 25px;
             font-weight: bold;
             margin-bottom: 5px;
         }
 
         .info {
-            font-size: 14px;
-            margin-bottom: 3px;
+            font-size: 18px;
+            margin-bottom: 5px;
         }
     </style>
 </head>
 <body>
     <div class="id-card">
         <div class="profile-pic">
-            <div class="person">
-                <!-- Simple illustration of a person -->
-                <svg viewBox="0 0 100 100" width="50" height="50" class="person-icon">
-                    <circle cx="50" cy="40" r="30" fill="          
-                    <rect x="30" y="70" width="40" height="30" fill="#d3d3d3"/>
-                </svg>
-            </div>
+            <img src="images/karan.jpg" alt="Profile Picture">
         </div>
         <div class="details">
-            <div class="name">Karan Mahor</div>
+            <div class="name">Karan Mahor </div>
             <div class="info">Enrollment: BTIT24O1067</div>
             <div class="info">Branch: Information Technology</div>
-            <div class="info">Semester: 3th</div>
+            <div class="info">Semester: 3rd</div>
         </div>
     </div>
 </body>
